--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Flip disc display experiments",
   "main": "test.js",
   "dependencies": {
+    "array.from": "^0.2.0",
+    "async": "^1.5.0",
+    "bdf": "erkkah/BDF.js",
     "layout-bmfont-text": "^1.3.2",
     "mono-bitmap": "^0.0.2",
+    "pureimage": "0.0.11",
     "serialport": "^2.0.5",
     "three": "^0.73.0",
     "three-software-renderer": "^1.1.0",
@@ -15,6 +19,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+  	"type": "git",
+  	"url": "https://github.com/erkkah/flipdisc.git"
+  }
   "author": "Erik Agsjö",
   "license": "ISC"
 }
