--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "array.from": "^0.2.0",
     "async": "^1.5.0",
     "bdf": "erkkah/BDF.js",
+    "diskdb": "^0.1.14",
+    "express": "^4.13.3",
+    "ini": "^1.3.4",
     "layout-bmfont-text": "^1.3.2",
     "mono-bitmap": "^0.0.2",
     "pureimage": "0.0.11",
     "serialport": "^2.0.5",
+    "socket.io": "^1.3.7",
     "three": "^0.73.0",
     "three-software-renderer": "^1.1.0",
     "three.js": "^0.73.0"
@@ -20,9 +24,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-  	"type": "git",
-  	"url": "https://github.com/erkkah/flipdisc.git"
-  }
+    "type": "git",
+    "url": "https://github.com/erkkah/flipdisc.git"
+  },
   "author": "Erik Agsjö",
   "license": "ISC"
 }
