--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "diskdb": "^0.1.14",
     "express": "^4.13.3",
     "ini": "^1.3.4",
+    "riot": "^2.3.12",
     "serialport": "^2.0.5",
     "socket.io": "^1.3.7"
   },
   "devDependencies": {
+    "browserify": "^13.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "jsdoc -c jsdoc_conf.json -d doc",
+    "build": "browserify index.js -o public/bundle.js",
+    "start": "npm run build && node main"
   },
   "repository": {
     "type": "git",
