--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "array.from": "^0.2.0",
     "bdf": "erkkah/BDF.js",
+    "csv-parse": "^1.0.1",
     "diskdb": "^0.1.14",
     "express": "^4.13.3",
     "ini": "^1.3.4",
     "riot": "^2.3.12",
     "serialport": "^2.0.5",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "unirest": "^0.4.2"
   },
   "devDependencies": {
     "browserify": "^13.0.0"
