--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "diskdb": "^0.1.14",
     "express": "^4.13.3",
     "ini": "^1.3.4",
+    "pngparse": "^2.0.1",
     "riot": "^2.3.12",
     "serialport": "^2.0.5",
     "socket.io": "^1.3.7",
     "unirest": "^0.4.2"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc": "jsdoc -c jsdoc_conf.json -d doc",
