--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "csv-parse": "^1.0.1",
     "diskdb": "^0.1.14",
     "express": "^4.13.3",
+    "image-dither": "^1.0.1",
     "ini": "^1.3.4",
-    "pngparse": "^2.0.1",
+    "jimp": "^0.2.21",
     "riot": "^2.3.12",
     "serialport": "^2.0.5",
     "socket.io": "^1.3.7",
