--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "csv-parse": "^1.0.1",
     "diskdb": "^0.1.14",
     "express": "^4.13.3",
+    "express-middleware-readme.md": "^0.3.0",
     "ini": "^1.3.4",
     "riot": "^2.3.12",
     "serialport": "^2.0.5",
     "socket.io": "^1.3.7",
     "unirest": "^0.4.2"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc": "jsdoc -c jsdoc_conf.json -d doc",
