--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "array.from": "^0.2.0",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "bdf": "erkkah/BDF.js",
@@ -16,6 +17,7 @@
     "ini": "^1.3.4",
     "jimp": "^0.2.21",
     "riot": "^2.3.12",
+    "riotify": "^0.1.2",
     "serialport": "^2.0.5",
     "socket.io": "^1.3.7",
     "unirest": "^0.4.2"
