--- a/flipdisc.ini
+++ b/flipdisc.ini
@@ -6,13 +6,14 @@
 port = 5001
 
 [serial]
-device = /dev/ttyAMA0
+device = NONE
+;/dev/ttyAMA0
 baudrate = 57600
 
 [display]
 orientation = landscape
 width = 2
-height = 1
+height = 2
 
 [database]
 root = ./db
