Added config of caching and script timeout

--- a/flipdisc.ini
+++ b/flipdisc.ini
@@ -4,6 +4,7 @@
 
 [http]
 port = 5001
+cache = 7 days
 
 [serial]
 device = NONE
@@ -19,5 +20,7 @@ height = 2
 root = ./db
 
 [controller]
-; Update interval in seconds
+; Data fetcher update interval in seconds
 updateInterval = 10
+; Script timeout in milliseconds
+scriptTimeout = 1000
