Added auth + tweaked throttling

--- a/flipdisc.ini
+++ b/flipdisc.ini
@@ -21,6 +21,9 @@ root = ./db
 
 [controller]
 ; Data fetcher update interval in seconds
-updateInterval = 10
+updateInterval = 1
 ; Script timeout in milliseconds
 scriptTimeout = 1000
+
+[auth]
+pass=blahonga
