--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-parse": "^1.0.1",
     "diskdb": "^0.1.14",
     "express": "^4.13.3",
+    "express-basic-auth": "^1.1.3",
     "image-dither": "^1.0.1",
     "ini": "^1.3.4",
     "jimp": "^0.2.21",
@@ -22,7 +23,9 @@
     "socket.io": "^1.3.7",
     "unirest": "^0.4.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jsdoc": "^3.5.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc": "jsdoc -c jsdoc_conf.json -d doc",
