--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "flipdisc",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Flip disc display controller",
   "main": "main.js",
   "dependencies": {
-    "array.from": "^0.2.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
@@ -16,12 +15,12 @@
     "express-basic-auth": "^1.1.3",
     "image-dither": "^1.0.1",
     "ini": "^1.3.4",
-    "jimp": "^0.2.21",
+    "jimp": "^0.2.28",
+    "request": "^2.88.0",
     "riot": "^2.3.12",
     "riotify": "^0.1.2",
-    "serialport": "^2.0.5",
-    "socket.io": "^1.3.7",
-    "unirest": "^0.4.2"
+    "serialport": "^7.0.2",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "jsdoc": "^3.5.5"
